[package]
name = "dirinfo"
version = "0.1.1"
authors = ["Ng Cheng Leong <renlore@hotmail.com>"]
edition = "2018"
description = "Crate dirinfo provides easy to use API for collecting various information about a directory hierarchy"
repository = "https://github.com/renl/dirinfo"
license = "MIT"
readme = "README.md"

[dependencies]
walkdir = "2"